--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-typical": "^0.1.3",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
@@ -46,6 +46,6 @@
   "devDependencies": {
     "@types/react-typical": "^0.1.0",
     "sass": "^1.57.1",
-    "typescript-plugin-css-modules": "^4.1.1"
+    "typescript-plugin-css-modules": "^1.3.1"
   }
 }
